--- a/YoYoWebApp/Static/Styles/app.css
+++ b/YoYoWebApp/Static/Styles/app.css
@@ -29,6 +29,14 @@
     cursor: pointer;
 }
 
+.horizontal-block {
+    display: inline-block;
+    vertical-align: top;
+    /*margin-left: 15px;
+    margin-right: 15px;*/
+    padding:15px;
+}
+
 .user {
     padding: 30px;
     text-align: left;
